2010-04-28 Wang Lu <coolwanglu(a)gmail.com>
	* Bug fix: dump_to_file
	[Thanks to Bryan Cain]
	* Manually add a cheat entry
	* Update values in the lists

2010-01-19 WANG Lu <coolwanglu(a)gmail.com>
	* Bug fix: read /proc/<pid>/mem on 32bit machines
	* Bug fix: scan for double variables on 32bit machines
	* a little improvement on peekbuf
	* Better communication, replace readline with printf when running as
      backend
	* `scan for address` supported

2010-01-16 WANG Lu <coolwanglu(a)gmail.com>
	* Memory Editor
	* Fix copyright strings (again)
	* new 'dump' command

2010-01-12 WANG Lu <coolwanglu(a)gmail.com>
	* Bugs fixed
 	* Better DEFAULT_LONGDOC
	* Better GUI
	* Better communication between GUI & backend
	* Progress bar in GUI
	* Several other UI improvement

2010-01-10 WANG Lu <coolwanglu(a)gmail.com>
	* STRING supported
	* Fixed a bug relacted to match_flag, now match_flags seems to be
      `dangerous` since I made it a union now.
	* Fixed a memory bug in target_memory_info_array.c

2010-01-09 WANG Lu <coolwanglu(a)gmail.com>
    * BYTEARRAY supported, oh yeah

2010-01-07 WANG Lu <coolwanglu(a)gmail.com>
	* Added uservalue_t and clean up some value_t, this make it more flexible,
	  and make it possible to support more data types and even user-specific
	  scan routine
	* in scan routines old_value and user_value are both provided
	* clean up MATCHES_AND_VALUES stuff, since currently we don't use MATCHES
	  or VALUES
	* removed snapshot and use MATCHANY instead, such that this can be used to
      filter out data types
	* now user can provide float numbers
	* INCREASEDBY and DECREASEDBY support
    
2010-01-06 WANG Lu <coolwanglu(a)gmail.com>
    * Fixed detection of reverse change, but it's now working partially, see
	  comments in `help option`
	* MATCHANY can be used to filter out types now
	* GREATERTHAN & LESSTHAN supported

2010-01-03 WANG Lu <coolwanglu(a)gmail.com>
    * better GUI
	* support scanning for a speicific type of data
	* autotools-ized gui